# syma-lsp

./: Cargo.toml
src/: main.rs
