[package]
name = "syma-lsp"
version = "0.1.0"
edition = "2024"
description = "LSP server for the Syma programming language"

[[bin]]
name = "syma-lsp"
path = "src/main.rs"

[dependencies]
syma = { path = "../syma" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lsp-server = "0.7"
lsp-types = "0.95"
